fix issue with navbar text underline animation, fix issue with navbar underline effect not aligning in firefox browser, add animation to icon on hover

--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -4,7 +4,6 @@
 }
 
 nav {
-position: relative;
  display:flex;
  justify-content: flex-start;
  align-items: center;
@@ -18,26 +17,36 @@ position: relative;
   position: relative;
   text-decoration: none;
   color:#101828;
-  font-weight: 500;
+ 
+  text-transform: uppercase;
+  transition: 0.4s ease-out;
 }
 
-.navLinks a::after {
+.navLinks a:after {
  content: "";
  position: absolute;
  background: rgba(81, 103, 155, 0.5);
  height: 5px;
+ width: 100%;
  left: 0px;
  bottom: -3px;
  border-radius: 20px;
  opacity: 0;
  transition: 0.4s ease-out;
- 
+ margin-bottom: -3px ;
+}
+
+@-moz-document url-prefix() {
+  .navLinks a:after {
+    left: -3px;
+  }
 }
 
 .navLinks a:hover::after {
   width: 100%;
   height: 5px;
   opacity: 1;
+  transition: 0.4s ease-out;
 
 }
 
@@ -49,20 +58,28 @@ ul.navLinks {
 
 .navLinks{
   position: absolute;
-  list-style-type: none;
-  text-decoration: none;
-  font-size: 24px;
-  line-height: 30px;
-  text-transform: uppercase;
   right:29px;
   top: 43px;
   margin: 0;
+  list-style-type: none;
+  text-decoration: none;
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 30px;
+}
+
+.logo {
+  transition:all 0.3s ease-in-out
 }
 
 a.logo{
   width: 141px;
   height: 70px;
   margin-left: 61px;
+  }
+
+  .logo:hover {
+    transform: scale(105%);
   }
 
   .MenuIcon{
@@ -80,7 +97,6 @@ a.logo{
     position: fixed;
     width: 100%;
     top: 0;
-    background-color: rgb(81, 103, 155);
   }
 
   @media screen and (max-width: 1015px) {
